@@ -643,7 +643,7 @@
 
       ;; mysql_stmt_execute
       (define-cproc mysql-stmt-execute (stmtx::<mysql-stmt> &rest args)
-	(body <void> "MysqlStmtxExecute(stmtx, args);"))
+	(body <void> "MysqlStmtxExecute(stmtx, args); MysqlResultUnmarkClosed(stmtx_scm);"))
 
       ;; mysql_stmt_fetch
       (define-cproc mysql-stmt-fetch (stmtx::<mysql-stmt>)
@@ -659,7 +659,8 @@
       (define-cproc mysql-stmt-free-result (stmtx::<mysql-stmt>)
 	(body <void>
 	      "if (mysql_stmt_free_result(stmtx->stmt))"
-	      "  raise_mysql_stmt_error(stmtx->stmt, \"mysql_stmt_free_result\");"))
+	      "  raise_mysql_stmt_error(stmtx->stmt, \"mysql_stmt_free_result\");"
+	      "MysqlResultMarkClosed(stmtx_scm);"))
 
       ;; mysql_stmt_init(integrate into mysql-stmt-prepare)
 
@@ -685,7 +686,8 @@
       (define-cproc mysql-stmt-reset (stmtx::<mysql-stmt>)
 	(body <void>
 	      "if (mysql_stmt_reset(stmtx->stmt) != 0)"
-	      "  raise_mysql_stmt_error(stmtx->stmt, \"mysql_stmt_reset\");"))
+	      "  raise_mysql_stmt_error(stmtx->stmt, \"mysql_stmt_reset\");"
+	      "MysqlResultMarkClosed(stmtx_scm);"))
 
       ;; mysql_stmt_result_metadata
       ;; mysql_stmt_row_seek
@@ -699,6 +701,9 @@
 
       (define-cproc mysql-stmt-closed? (stmtx::<mysql-stmt>)
 	(expr <boolean> "MysqlClosedP(stmtx_scm)"))
+
+      (define-cproc mysql-stmt-res-closed? (stmtx::<mysql-stmt>)
+	(expr <boolean> "MysqlResultClosedP(stmtx_scm)"))
 
       (define-cproc mysql-stmt-fetch-field-names (stmtx::<mysql-stmt>)
 	(call "MysqlStmtxFetchFieldNames"))))
