@@ -7,14 +7,24 @@
 
 (use gauche.test)
 (use gauche.collection)
+(use gauche.sequence)
+(use util.relation)
 (use srfi-1)
 (use srfi-13)
 (use dbi)
+
+(define-syntax set!!
+  (syntax-rules ()
+    ((_ var val)
+     (let1 v val
+       (set! var v)
+       v))))
 
 (test-start "dbd.mysql(via DBI)")
 
 (define conn #f)
 (define result #f)
+(define query #f)
 
 ;; Test connecting the database.
 ;; The tester should set up the mysql database so that the current user
@@ -24,23 +34,27 @@
          (set! conn c)
          (class-name (class-of c))))
 
+(test* "dbi-open?" #t (dbi-open? conn))
+
 (test* "escape sql" '("abc" "ab\\'c" "ab\\\\c")
        (map (cut dbi-escape-sql conn <>) '("abc" "ab'c" "ab\\c")))
 
 (guard (e (#t #t))
        (begin (dbi-do conn "drop table test") #t))
 
-(test* "dbi-do create table test" #t
+(test-section "dbi-do")
+
+(test* "create table" #t
        (begin (dbi-do conn "create table test (id integer, name varchar(255))")
               #t))
 
-(test* "dbi-do insert" #t
+(test* "insert" #t
        (begin
          (dbi-do conn "insert into test (id, name) values (10, 'yasuyuki')")
          (dbi-do conn "insert into test (id, name) values (20, 'nyama')")
          #t))
 
-(test* "dbi-do select" '<mysql-result-set>
+(test* "select" '<mysql-result-set>
        (let1 r (dbi-do conn "select * from test")
          (set! result r)
          (class-name (class-of r))))
@@ -50,34 +64,35 @@
               (list (dbi-get-value row 0) (dbi-get-value row 1)))
             result))
 
-(test* "dbi-prepare & execute" '(("10" "yasuyuki"))
-       (map (lambda (row)
-              (list (dbi-get-value row 0) (dbi-get-value row 1)))
-            (dbi-execute (dbi-prepare conn "select * from test where id=?")
-                         "10")))
+(test-section "dbi-prepare")
 
-(test* "dbi-prepare & execute" '(("20" "nyama"))
-       (map (lambda (row)
-              (list (dbi-get-value row 0) (dbi-get-value row 1)))
-            (dbi-execute (dbi-prepare conn "select * from test where id=?")
-                         "20")))
+(test* "dbi-prepare"
+       '<mysql-query>
+       (class-name (class-of (set!! query (dbi-prepare conn "select * from test where id=?")))))
 
-(test* "dbi-prepare & execute" '()
-       (map (lambda (row)
-              (list (dbi-get-value row 0) (dbi-get-value row 1)))
-            (dbi-execute (dbi-prepare conn "select * from test where id=?")
-                         "30")))
+(test* "dbi-open?" #t (dbi-open? query))
 
-(test* "dbi-prepare & execute (pass-through)" '(("20" "nyama"))
-       (map (lambda (row)
-              (list (dbi-get-value row 0) (dbi-get-value row 1)))
-            (dbi-execute (dbi-prepare conn "select * from test where id=20"
-                                      :pass-through #t))))
-
-(test* "dbi-prepare & execute (pass-through)" '<mysql-error>
-       (guard (e (else (class-name (class-of e))))
-         (dbi-execute (dbi-prepare conn "select * from test where id=?"
-                                   :pass-through #t))))
+(for-each (lambda (param expect)
+	    (let1 res (dbi-execute query param)
+	      (test* "dbi-open?" #t (dbi-open? res))
+	      (test* "dbi-execute" '<mysql-result-set> (class-name (class-of res)))
+	      (test* "<mysql-result-set> is a <sequence>" #t (is-a? res <sequence>))
+	      (test* "<mysql-result-set> is a <relation>" #t (is-a? res <relation>))
+	      (for-each (lambda (row)
+			  (test* "dbi-get-value" expect
+				 (list (dbi-get-value row 0) (dbi-get-value row 1))))
+			res)
+	      (dbi-close res)
+	      (test* "dbi-close & dbi-open?" #f (dbi-open? res))
+	      ))
+	  '("10" "20" "30")
+	  '(("10" "yasuyuki")
+	    ("20" "nyama")
+	    #f))
+(test* "dbi-close" #f
+       (begin
+	 (dbi-close query)
+	 (dbi-open? query)))
 
 (test* "dbi-do drop table test" #t
        (begin (dbi-do conn "drop table test") #t))
